fix(sidebar-filter): left align thumbs + items with filter icon

--- a/client/src/document/organisms/sidebar/filter.scss
+++ b/client/src/document/organisms/sidebar/filter.scss
@@ -76,11 +76,10 @@
   }
 
   .sidebar-filter-footer {
-    align-items: center;
     display: flex;
     flex-direction: column;
     font-size: var(--type-tiny-font-size);
-    text-align: center;
+    margin-left: 0.7rem;
 
     .glean-thumbs {
       height: 1.5rem;
